# py-log-parser

./: README.md  groups  project.config  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
py_log_parser/: __init__.py  exceptions.py  helpers.py  settings.py  shell.py
py_log_parser/collector/: api.py  shell.py
py_log_parser/parser/: api.py  extractors.py  shell.py
py_log_parser/workflows/mos/: api.py  shell.py
