[metadata]
name = py_log_parser
summary = Log collector, parser, analyzer
description-file =
    README.md
license = Apache License, Version 2.0
author = Mirantis
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    py_log_parser

[entry_points]
console_scripts =
    py-log-parser = py_log_parser.shell:main

[wheel]
universal = 1

[pbr]
warnerrors = true